exports[`test getSections() should return an array 1`] = `
Array [
  Object {
    "components": Array [],
    "content": RequireStatement {
      "filepath": "!!<rootDir>/loaders/examples-loader.js!<rootDir>/test/components/Button/Readme.md",
    },
    "name": "Readme",
    "sections": Array [],
  },
  Object {
    "components": Array [
      Object {
        "examples": RequireStatement {
          "filepath": "!!<rootDir>/loaders/examples-loader.js!<rootDir>/test/components/Button/Button.js",
        },
        "filepath": "components/Button/Button.js",
        "module": RequireStatement {
          "filepath": "<rootDir>/test/components/Button/Button.js",
        },
        "nameFallback": "Button",
        "pathLine": "components/Button/Button.js",
        "props": RequireStatement {
          "filepath": "!!<rootDir>/loaders/props-loader.js!<rootDir>/test/components/Button/Button.js",
        },
      },
      Object {
        "examples": RequireStatement {
          "filepath": "!!<rootDir>/loaders/examples-loader.js!<rootDir>/test/components/Placeholder/Placeholder.js",
        },
        "filepath": "components/Placeholder/Placeholder.js",
        "module": RequireStatement {
          "filepath": "<rootDir>/test/components/Placeholder/Placeholder.js",
        },
        "nameFallback": "Placeholder",
        "pathLine": "components/Placeholder/Placeholder.js",
        "props": RequireStatement {
          "filepath": "!!<rootDir>/loaders/props-loader.js!<rootDir>/test/components/Placeholder/Placeholder.js",
        },
      },
      Object {
        "examples": RequireStatement {
          "filepath": "!!<rootDir>/loaders/examples-loader.js!<rootDir>/test/components/RandomButton/RandomButton.js",
        },
        "filepath": "components/RandomButton/RandomButton.js",
        "module": RequireStatement {
          "filepath": "<rootDir>/test/components/RandomButton/RandomButton.js",
        },
        "nameFallback": "RandomButton",
        "pathLine": "components/RandomButton/RandomButton.js",
        "props": RequireStatement {
          "filepath": "!!<rootDir>/loaders/props-loader.js!<rootDir>/test/components/RandomButton/RandomButton.js",
        },
      },
    ],
    "content": undefined,
    "name": "Components",
    "sections": Array [],
  },
]
`;

exports[`test processSection() should return an object for section with components 1`] = `
Object {
  "components": Array [
    Object {
      "examples": RequireStatement {
        "filepath": "!!<rootDir>/loaders/examples-loader.js!<rootDir>/test/components/Button/Button.js",
      },
      "filepath": "components/Button/Button.js",
      "module": RequireStatement {
        "filepath": "<rootDir>/test/components/Button/Button.js",
      },
      "nameFallback": "Button",
      "pathLine": "components/Button/Button.js",
      "props": RequireStatement {
        "filepath": "!!<rootDir>/loaders/props-loader.js!<rootDir>/test/components/Button/Button.js",
      },
    },
    Object {
      "examples": RequireStatement {
        "filepath": "!!<rootDir>/loaders/examples-loader.js!<rootDir>/test/components/Placeholder/Placeholder.js",
      },
      "filepath": "components/Placeholder/Placeholder.js",
      "module": RequireStatement {
        "filepath": "<rootDir>/test/components/Placeholder/Placeholder.js",
      },
      "nameFallback": "Placeholder",
      "pathLine": "components/Placeholder/Placeholder.js",
      "props": RequireStatement {
        "filepath": "!!<rootDir>/loaders/props-loader.js!<rootDir>/test/components/Placeholder/Placeholder.js",
      },
    },
    Object {
      "examples": RequireStatement {
        "filepath": "!!<rootDir>/loaders/examples-loader.js!<rootDir>/test/components/RandomButton/RandomButton.js",
      },
      "filepath": "components/RandomButton/RandomButton.js",
      "module": RequireStatement {
        "filepath": "<rootDir>/test/components/RandomButton/RandomButton.js",
      },
      "nameFallback": "RandomButton",
      "pathLine": "components/RandomButton/RandomButton.js",
      "props": RequireStatement {
        "filepath": "!!<rootDir>/loaders/props-loader.js!<rootDir>/test/components/RandomButton/RandomButton.js",
      },
    },
  ],
  "content": undefined,
  "name": "Components",
  "sections": Array [],
}
`;

exports[`test processSection() should return an object for section with content 1`] = `
Object {
  "components": Array [],
  "content": RequireStatement {
    "filepath": "!!<rootDir>/loaders/examples-loader.js!<rootDir>/test/components/Button/Readme.md",
  },
  "name": "Readme",
  "sections": Array [],
}
`;
